--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,9 @@
 # Ignore .elixir_ls files
 /.elixir_ls
 
+# Ignore vscode files
+/.vscode
+
 # If the VM crashes, it generates a dump, let's ignore it too.
 erl_crash.dump
 
