--- a/assets/package.json
+++ b/assets/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "jquery": "^3.4.1",
+    "json-formatter-js": "^2.2.1",
     "p5": "^0.10.2",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
